make my profile prettier

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <h2>Follow me</h2>
         <p>For the naughty ones, the last one is my exclusive content xoxo ;)</p>
         <ul class="list-inline">
-          <li><a href="https://github.com/ThibautRoland"><i class="fa-brands fa-github"></i></a></li>
-          <li><a href="https://www.instagram.com/thibautrld/"><i class="fa-brands fa-instagram"></i></a></li>
+          <li><a href="https://github.com/ThibautRoland" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+          <li><a href="https://www.instagram.com/thibautrld/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
           <!-- <li><a href="https://www.facebook.com/thibaut.roland.9/"><i class="fa-brands fa-facebook"></i></a></li>
            -->
-           <li><a href="https://onlyfans.com/">OF</i></a></li>
+           <li><a href="https://onlyfans.com/" target="_blank">OF</i></a></li>
         </ul>
       </div>
     </div>
